--- a/style.css
+++ b/style.css
@@ -1,52 +1,74 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     text-align: center;
-    margin: 0;
+    height: 100vh;
+}
+
+:root {
+    --main-text-color: #3F3D56;
+    --highlight-color: #EE24FF;
+    --text-color: #828282;
+    --border-color: #ECEFF2;
 }
 
 #hero {
-    width: 592px;
+    width: 540px;
     margin: 0 auto 72px;
 }
 
 #hero img { 
-    margin-bottom: 72px;
+    margin-bottom: 32px;
+    margin-top: 64px;
 }
 
 h1 {
-    font-family: 'Inter', sans-serif;
-    font-size: 49px;
-    line-height: 56px;
+    font-family: 'Dosis', sans-serif;
+    font-size: 32px;
     font-weight: normal;
+    margin-bottom: 16px;
 }
 
 h1 span {
     font-weight: bold;
+    color: var(--highlight-color);
 }
 
-span, a {
-    color: #F90;
+strong, a {
+    color: var(--main-text-color);
 }
 
-p, footer {
-    color: #7D7987;
-    font-size: 14px;
-    line-height: 28px;
+p, #footer {
+    color: var(--text-color);
+    font-size: 15px;
+    line-height: 22px;
+}
+
+#footer a {
+    font-weight: bold;
+    text-decoration: none;
 }
 
 #footer a + a {
-    margin-left: 28px;
+    margin-left: 42px;
 }
 
 .line {
    width: 568px;
    height: 0;
-   margin: 0 auto 8px;
-   border: 1px solid #ECEFF2; 
+   margin: 0 auto 16px;
+   border: 1px solid var(--border-color); 
 }
 
-#balls-decoration {
+#wave-decoration {
+    width: 100%;
+    height: auto;
     position: fixed;
     bottom: 0;
-    right: 0;
+    left: 0;
 }
